# agentic-exception-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  quality.yml  release-gate.yml
benchmarks/: bench_bus.py  bench_resilient_wrap.py  bench_retry.py  conftest.py
src/agentic_exception_sdk/: __init__.py  __init__.pyi  bundle.py  bundle.pyi  noop.py  noop.pyi
src/agentic_exception_sdk/budget/: __init__.py  __init__.pyi  models.py  models.pyi  streaming.py  streaming.pyi  watchdog.py  watchdog.pyi
src/agentic_exception_sdk/config/: __init__.py  __init__.pyi  validate.py  validate.pyi
src/agentic_exception_sdk/escalation/: __init__.py  __init__.pyi  checkpoint.py  checkpoint.pyi  handlers.py  handlers.pyi  router.py  router.pyi
src/agentic_exception_sdk/multi_agent/: __init__.py  __init__.pyi  consensus.py  consensus.pyi  parallel.py  parallel.pyi  router.py  router.pyi  sla.py  sla.pyi
src/agentic_exception_sdk/observability/: __init__.py  __init__.pyi  metrics.py  metrics.pyi  otel.py  otel.pyi  sink.py  sink.pyi  structured_log.py  structured_log.pyi
src/agentic_exception_sdk/persistence/: __init__.py  __init__.pyi  attestation.py  attestation.pyi  availability.py  availability.pyi  null_provider.py  null_provider.pyi  provider.py  provider.pyi
src/agentic_exception_sdk/propagation/: __init__.py  __init__.pyi  bus.py  bus.pyi  dlq.py  dlq.pyi  protocol.py  protocol.pyi
src/agentic_exception_sdk/resilience/: __init__.py  __init__.pyi  circuit_breaker.py  circuit_breaker.pyi  compensating.py  compensating.pyi  fallback.py  fallback.pyi  recovery.py  recovery.pyi  retry.py  retry.pyi  wrap.py  wrap.pyi
src/agentic_exception_sdk/taxonomy/: __init__.py  __init__.pyi  classifier.py  classifier.pyi  enums.py  enums.pyi  envelope.py  envelope.pyi  errors.py  errors.pyi  owasp.py  owasp.pyi
src/agentic_exception_sdk/validation/: __init__.py  __init__.pyi  gates.py  gates.pyi  guard_rails.py  guard_rails.pyi  rules_version.py  rules_version.pyi  trust_boundary.py  trust_boundary.pyi
src/agentic_exception_sdk_examples/: __init__.py
src/agentic_exception_sdk_examples/crewai/: __init__.py  crew.py  run_example.py  tools.py
src/agentic_exception_sdk_examples/langgraph/: __init__.py  graph.py  run_example.py  state.py
tests/: conftest.py
tests/fuzz/: test_trust_boundary_fuzz.py
tests/integration/: test_adversarial_fixes.py  test_circuit_breaker_async.py  test_consensus_mesh.py  test_fixes_validation.py  test_wrapper_pipeline.py
tests/unit/: test_budget.py  test_config_validation.py  test_dlq.py  test_escalation.py  test_multiagent.py  test_observability_metrics_and_logs.py  test_owasp_mapping.py  test_parallel_call.py  test_persistence.py  test_protocol_and_observability.py  test_recovery_policy.py  test_redaction_hardening.py  test_resilience.py  test_streaming_budget.py  test_taxonomy.py  test_validation.py  test_wrap.py
